--- a/index.html
+++ b/index.html
@@ -180,7 +180,31 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireBallSize = 22;
 
+  function getFireballSpeed(isNotWindFromLeft) {
+    if (isNotWindFromLeft)
+      return 2;
+    return 5;
+  }
+
+  var wizardSpeed = 3;
+
+  var wizardWidth = 70;
+
+  function getWizardHeight() {
+    return 1.337 * wizardWidth;
+  }
+
+  function getWizardX(gameFieldWidth) {
+    return gameFieldWidth / 2;
+  }
+
+  function getWizardY(gameFieldHeight) {
+    return gameFieldHeight / 3;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
